--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,1 +1,21 @@
-# https://www.playframework.com/documentation/latest/Configuration
+play.modules.enabled += "modules.DI"
+
+play.cache.bindCaches = ["chat-cache"]
+
+my-context {
+  executor = "thread-pool-executor"
+  throughput = 1
+  thread-pool-executor {
+    fixed-pool-size = 20
+  }
+}
+
+include "production"
+
+play.http.secret.key = ${application_secret_key}
+
+play.filters.hosts {
+  allowed = ${allowed_hosts}
+}
+
+http.port = ${http_port}
